<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Smile ID Demo</string>

    <!-- SPLASH SCREEN -->
    <string name="lbl_smile_identity">Smile Identity</string>
    <string name="lbl_version_number">lib: %s - app: %s</string>
    <string name="lbl_play_service_error">Install or update Play Service</string>
    <string name="msg_use_offline_jobs">Would you like to use existing or add new offline jobs?</string>
    <string name="lbl_use_offline_jobs">Use existing jobs</string>
    <string name="lbl_add_offline_jobs">Add to existing Jobs</string>
    <string name="msg_enrollment_required">You have to enrol (register) first before you can authenticate</string>
    <string name="btn_cancel">Cancel</string>

    <!-- MAIN SCREEN -->
    <string name="lbl_main_heading">Home Menu</string>
    <string name="lbl_heading_enrollment">ENROLLMENT</string>
    <string name="lbl_heading_update">UPDATE DETAILS</string>
    <string name="lbl_heading_authenticate">AUTHENTICATION</string>
    <string name="lbl_heading_other">OTHER</string>

    <!-- SELFIE SCREEN -->
    <string name="lbl_selfie_heading">Selfie Capture</string>
    <string name="lbl_selfie_reposition">Put your face inside the oval</string>
    <string name="lbl_selfie_capturing">Capturing...</string>
    <string name="lbl_selfie_capture">Capture</string>
    <string name="lbl_selfie_take_another_selfie">Take Another Selfie</string>
    <string name="lbl_selfie_add_user_id_info">Add user ID information</string>
    <string name="lbl_selfie_save_and_auth_later">Save and auth later</string>
    <string name="lbl_selfie_continue_to_upload">Continue to upload</string>

    <!-- ENROLL RESULT SCREEN -->
    <string name="lbl_enroll_result_heading">Result</string>
    <string name="lbl_enroll_result_country">Country</string>
    <string name="lbl_enroll_result_id_type">Type of Identification</string>
    <string name="sp_enroll_result_id_type_hint">Select Id Type</string>
    <string name="lbl_enroll_result_upload_now">Upload Now</string>
    <string name="lbl_enroll_result_internet_recovered">Auto Upload On Internet recovered</string>

    <!-- CARD CAPTURE SCREEN -->
    <string name="lbl_capture_card_place_id_in_rectangle">Fit ID Card inside Rectangle</string>
    <string name="lbl_capture_card_tap_screen_to_capture">Tap Inside Screen To Capture</string>

    <string name="demo_result_text">Result text : %s</string>

    <!-- Enrollment -->
    <string name="lbl_enroll">Register (Enroll)</string>
    <string name="lbl_enroll_with_id_number">Register (Enroll) with ID number</string>
    <string name="lbl_enroll_with_id_card">Register (Enroll) with ID Card</string>
    <string name="demo_enrolled_successfully">ENROLLED/REGISTERED SUCCESSFULLY</string>
    <string name="demo_provisionally_enrolled">PROVISIONAL ENROLL/REGISTER</string>
    <string name="demo_enrolled_failed">ENROLLED/REGISTER FAILED</string>
    <string name="demo_enrolled_confidence_value">Confidence value %d%%</string>
    <string name="demo_enrolled_image_unusable">ENROLLED/REGISTER FAILED IMAGE UNUSABLE</string>


    <!--Auth-->
    <string name="demo_auth_successfully">VERIFIED SUCCESSFULLY</string>
    <string name="demo_provisionally_authed">PROVISIONAL VERIFICATION</string>
    <string name="demo_auth_failed">NOT VERIFIED</string>
    <string name="demo_auth_confidence_value">Confidence value %d%%</string>
    <string name="demo_auth_image_unusable">VERIFICATION FAILED IMAGE UNUSABLE</string>

    <!--Update photo-->
    <string name="demo_update_image_failed">UPDATE IMAGE FAILED</string>
    <string name="demo_update_image_success">UPDATED IMAGE SUCCESSFULLY</string>
    <string name="demo_update_photo_provisional">PROVISIONAL UPDATED IMAGE</string>
    <string name="re_enroll_re_register_user_with_id">Re-register (Re-Enroll) User With ID</string>
    <string name="re_enroll_re_register_user">Re-register (Re-Enroll) User</string>
    <string name="enroll_register_257">Register (Enroll) 257</string>
    <string name="enroll_register_260">Register (Enroll) 260</string>
    <string name="update_enrolled_register_image">Update Registered (Enrolled) Image</string>
    <string name="agent_mode_implementation_example">Agent mode Implementation example</string>
    <string name="auth">Authentication</string>
    <string name="id_validation">ID Validation</string>
    <string name="auth_258">Auth 258</string>
    <string name="auth_using_saved_data">Authentication using saved data</string>
    <string name="skip_id_info">Skip Id Info</string>
    <string name="step_set_id_info">Set ID Info</string>
    <string name="job_status">Job Status</string>
    <string name="id_doc_verification">Document Verification</string>
    <string name="id_file_paths">Captured Images</string>

    <string name="faceDetectedMessage">Custom  face detected message</string>
    <string name="flashMissingErrorMessage">Custom no flash message</string>
    <string name="noFaceDetectedMessage">Custom no face detected message</string>
    <string name="fitIdMessage">Custom fit id message</string>
    <string name="blurryMessage">Custom blurry message</string>
    <string name="tooFarMessage">Custom too far message</string>
    <string name="loadingMessage">Custom loading message</string>
    <string name="detectingFaceMessage">Custom detecting message</string>
    <string name="enroll_id_card_smile_ui">Smile UI Demo Enroll ID Card</string>
    <string name="enroll_smile_ui">Smile UI Enroll</string>
    <string name="enroll_register">Register (Enroll)</string>
    <string name="enroll_register_with_id_card">Register (Enroll) with id card</string>
    <string name="enroll_register_with_id_number">Register (Enroll) with ID number</string>
    <string name="lbl_smile_ui">SMILE UI</string>
    <string name="lbl_smile_ui_enroll_id_card">Smile UI ID Card Register (Enroll)</string>
    <string name="lbl_smile_ui_enroll">Smile UI Register (Enroll)</string>

    <string name="id_card_dialog_txt" translatable="false">Capture Back of the ID Card</string>
    <string name="id_card_dialog_txt_2" translatable="false">Would you like to capture the back of the ID Card as well?</string>
    <string name="btn_lbl_proceed" translatable="false">Proceed</string>
    <string name="btn_lbl_skip" translatable="false">Skip</string>

    <string name="sandbox" translatable="false">🟢 Sandbox</string>

    <string name="tab_lbl_home">Home</string>
    <string name="tab_lbl_resources">Resources</string>
    <string name="tab_lbl_settings">Settings</string>

    <string name="lbl_version_number_2">Version %s Android</string>
    <string name="basic_kyc" translatable="false">Basic KYC</string>
    <string name="enhanced_kyc" translatable="false">Enhanced KYC</string>
    <string name="biometric_kyc" translatable="false">Biometric KYC</string>
    <string name="doc_v" translatable="false">Document Verification</string>
    <string name="smart_selfie_auth" translatable="false">SmartSelfie\u00E2\u0084\u00A2\nAuthentication</string>

    <string name="res_link_docs_txt">Explore our documentation</string>
    <string name="res_link_docs_sub_txt">Read everything related to our solution stack</string>
    <string name="res_link_policy_txt">Privacy Policy</string>
    <string name="res_link_policy_sub_txt">Learn more about our solution stack</string>
    <string name="res_link_faqs_txt">View FAQs</string>
    <string name="res_link_faqs_sub_txt">Explore frequently asked questions</string>
    <string name="res_link_id_types_txt">Support ID types and documents</string>
    <string name="res_link_id_types_sub_txt">See our coverage range across the continent</string>
</resources>
