<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".SIDHomeActivity">
    
    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="22.74dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:text="Resources"
        android:textSize="16sp"
        android:textColor="#100F0F"
        android:textFontWeight="600"
        android:letterSpacing="0.01"
        android:gravity="center_vertical" />

    <com.demo.smileid.sid_sdk.CustomResourceLink
        android:id="@+id/crlDocs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bigTxt="@string/res_link_docs_txt"
        app:smallTxt="@string/res_link_docs_sub_txt"
        app:layout_constraintTop_toBottomOf="@id/tvHeading"
        android:layout_marginTop="56dp" />

    <com.demo.smileid.sid_sdk.CustomResourceLink
        android:id="@+id/crlPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bigTxt="@string/res_link_docs_txt"
        app:smallTxt="@string/res_link_docs_sub_txt"
        app:layout_constraintTop_toBottomOf="@id/crlDocs"
        android:layout_marginTop="22dp" />

    <com.demo.smileid.sid_sdk.CustomResourceLink
        android:id="@+id/crlFaqs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bigTxt="@string/res_link_faqs_txt"
        app:smallTxt="@string/res_link_faqs_sub_txt"
        app:layout_constraintTop_toBottomOf="@id/crlPolicy"
        android:layout_marginTop="22dp" />

    <com.demo.smileid.sid_sdk.CustomResourceLink
        android:id="@+id/crlIds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bigTxt="@string/res_link_id_types_txt"
        app:smallTxt="@string/res_link_id_types_sub_txt"
        app:lastItem="true"
        app:layout_constraintTop_toBottomOf="@id/crlFaqs"
        android:layout_marginTop="22dp" />

</androidx.constraintlayout.widget.ConstraintLayout>