<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".SIDHomeActivity">

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48.74dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:textSize="10sp"
        android:textColor="#979797"
        android:textFontWeight="400"
        android:letterSpacing="0.01"
        android:gravity="center_vertical" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlMenu"
        style="@style/TabLayout"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_lbl_home"
            android:icon="@drawable/tab_home_image" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_lbl_resources"
            android:icon="@drawable/tab_resources_image" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_lbl_settings"
            android:icon="@drawable/tab_settings_image" />

    </com.google.android.material.tabs.TabLayout>
    
    <com.demo.smileid.sid_sdk.StaticPager
        android:id="@+id/spScreens"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tlMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>