<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/sAutoUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="67dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/lbl_enroll_result_internet_recovered"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clNoCardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sAutoUpload"
            app:layout_goneMarginTop="10dp"
            android:layout_margin="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvLblCountry"
                style="@style/MainHeading"
                android:gravity="left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/lbl_enroll_result_country" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccpCountry"
                style="@style/EnrollResultCountryPicker"
                app:layout_constraintTop_toBottomOf="@id/tvLblCountry"
                app:ccp_customMasterCountries="GH,NG,KE,TZ,ZA"
                app:ccp_defaultPhoneCode="27" />

            <TextView
                android:id="@+id/tvLblIdType"
                style="@style/MainHeading"
                android:gravity="left"
                app:layout_constraintTop_toBottomOf="@id/ccpCountry"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/lbl_enroll_result_id_type" />

            <Spinner
                android:id="@+id/spIdType"
                style="@style/EnrollResultIdTypeSpinner"
                app:layout_constraintTop_toBottomOf="@id/tvLblIdType"
                android:hint="@string/sp_enroll_result_id_type_hint" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiIdNumber"
                style="@style/EnrollResultTextInput"
                app:layout_constraintTop_toBottomOf="@id/spIdType"
                android:hint="ID Number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiFirstName"
                style="@style/EnrollResultTextInput"
                app:layout_constraintTop_toBottomOf="@id/tiIdNumber"
                android:hint="First Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLastName"
                style="@style/EnrollResultTextInput"
                app:layout_constraintTop_toBottomOf="@id/tiFirstName"
                android:hint="Last Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiDOB"
                style="@style/EnrollResultTextInput"
                android:onClick="showDateDialog"
                app:layout_constraintTop_toBottomOf="@id/tiLastName"
                android:hint="Date Of Birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showDateDialog"
                    android:clickable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMultipleEnrollActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tiDOB">

                <TextView
                    android:id="@+id/tvSkipIdInfo"
                    style="@style/BtnAction"
                    android:onClick="skipIdInfo"
                    android:textStyle="bold"
                    app:layout_constraintWidth_percent="0.4"
                    app:layout_constraintHorizontal_bias="0.1"
                    android:layout_marginBottom="16dp"
                    android:text="@string/skip_id_info" />

                <TextView
                    android:id="@+id/tvSetIdInfo"
                    style="@style/BtnAction"
                    android:onClick="setIdInfo"
                    android:textStyle="bold"
                    app:layout_constraintWidth_percent="0.4"
                    app:layout_constraintHorizontal_bias="0.9"
                    android:layout_marginBottom="16dp"
                    android:text="@string/step_set_id_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvResult"
            style="@style/MainHeading"
            app:layout_constraintBottom_toTopOf="@+id/tvConfidenceValue"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvConfidenceValue"
            style="@style/MainHeading"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Confidence value 100%" />

        <TextView
            android:id="@+id/tvEnrollUploadNow"
            style="@style/BtnAction"
            android:onClick="uploadNow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.4"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/lbl_enroll_result_upload_now" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
