<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@drawable/dlg_bckgrd"
    android:paddingBottom="27.71dp">

    <ImageView
        android:id="@+id/ivBtnCancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="6dp" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="88.89dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_passport"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="63dp"
        android:text="Select Country / Id Type"
        android:textSize="16sp"
        android:textColor="#191D31"
        android:textFontWeight="600"
        android:lineSpacingExtra="2sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvLblCountry"
        style="@style/sid_info_screen_country_input_label"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:text="@string/lbl_enroll_result_country"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvInputCountry"
        style="@style/sid_info_screen_input_field"
        app:layout_constraintTop_toBottomOf="@id/tvLblCountry"
        android:text="@string/lbl_enroll_result_country"
        tools:ignore="MissingConstraints" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccpCountry"
        style="@style/EnrollResultCountryPicker"
        app:layout_constraintStart_toStartOf="@id/tvInputCountry"
        android:layout_marginLeft="16dp"
        app:ccp_textSize="16dp"
        app:ccp_arrowSize="24dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tvLblCountry"
        app:ccp_defaultPhoneCode="234"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvLblIdType"
        style="@style/sid_info_screen_country_input_label"
        app:layout_constraintTop_toBottomOf="@id/tvInputCountry"
        android:visibility="gone"
        android:text="@string/lbl_enroll_result_id_type"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spIdType"
        style="@style/EnrollResultIdTypeSpinner"
        app:layout_constraintStart_toStartOf="@id/tvLblIdType"
        android:layout_marginLeft="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvLblIdType"
        android:visibility="invisible"
        android:background="@color/red_400"
        android:hint="@string/sp_enroll_result_id_type_hint"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvInputIdType"
        style="@style/sid_info_screen_input_field"
        app:layout_constraintTop_toBottomOf="@id/tvLblIdType"
        android:visibility="gone"
        android:text="ID Type"
        android:onClick="openCountryPicker"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="299.71dp"
        android:layout_height="49.65dp"
        android:visibility="gone"
        android:background="@drawable/blue_btn_bckgrd"
        app:layout_constraintTop_toBottomOf="@id/spIdType"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textFontWeight="600"
        android:gravity="center"
        android:text="Select"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>